<?xml version="1.0" encoding="UTF-8" ?>
<resources>
    <string name="app_name">血圧マネジャー</string>
    <string name="tv_attention">*は必須項目です</string>
    <string name="tv_name">*名前（ニックネーム可）</string>
    <string name="tv_sex">性別</string>
    <string name="rb_male">男性</string>
    <string name="rb_female">女性</string>
    <string name="rb_etc">その他</string>
    <string name="tv_height">身長</string>
    <string name="tv_cm">cm</string>
    <string name="tv_weight">体重</string>
    <string name="tv_kg">kg</string>
    <string name="tv_age">年齢</string>
    <string-array name="sp_agelist">
        <item>10代</item>
        <item>20代</item>
        <item>30代</item>
        <item>40代</item>
        <item>50代</item>
        <item>60代</item>
        <item>60代</item>
        <item>70代以上</item>
    </string-array>
    <string name="tv_attention2">あとで設定から変更ができます</string>
    <string name="bt_entry">登録</string>
    <string name="dialog_title">登録確認</string>
    <string name="dialog_msg">今までのデータを削除します。よろしいですか。</string>
    <string name="dialog_btn_ok">yes</string>
    <string name="dialog_btn_ng">no</string>
    <string name="tv_userFinish">登録が完了しました</string>
    <string name="bt_next">次へ</string>
    <string name="dialog_ok_toast">削除しました</string>
    <string name="dialog_ng_toast">キャンセル</string>
    <string name="tv_countingTime">測定時間</string>
    <string name="bt_time">現在時刻</string>
    <string name="tv_upperBloodPressure">最高血圧</string>
    <string name="tv_lowerBloodPressure">最低血圧</string>
    <string name="tv_mmHg">mmHg</string>
    <string name="tv_pulse">脈拍</string>
    <string name="tv_pulseUnit">拍/脈</string>
    <string name="bt_back">戻る</string>
    <string name="bt_show">見る</string>
    <string name="bt_avg">平均</string>
    <string name="bt_maxValue">最大値</string>
    <string name="bt_graph">グラフ</string>
    <string name="dash">縦軸</string>
    <string name="example1">80~180まで</string>
    <string name="example2">50~140まで</string>
    <string name="example3">40~120まで</string>
    <string name="menu_reset">リセット</string>
</resources>