<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BloodPressureAdditionActivity">

    <ImageView
        android:src="@drawable/a531894"
        android:scaleType="fitXY"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.50"/>

    <TextView
        android:id="@+id/tvCountingTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/tv_countingTime"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvUpperBloodPressure"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/tv_upperBloodPressure"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCountingTime" />

    <EditText
        android:id="@+id/etUpperBloodPressure"
        android:hint="@string/example1"
        android:autofillHints="@string/example1"
        android:maxLength="3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="6"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvUpperBloodPressure"
        app:layout_constraintStart_toEndOf="@+id/tvUpperBloodPressure" />

    <TextView
        android:id="@+id/tvMmhg1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_mmHg"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/etUpperBloodPressure"
        app:layout_constraintStart_toEndOf="@+id/etUpperBloodPressure" />

    <TextView
        android:id="@+id/tvLowerBloodPressure"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/tv_lowerBloodPressure"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUpperBloodPressure" />

    <EditText
        android:id="@+id/etLowerBloodPressure"
        android:hint="@string/example2"
        android:autofillHints="@string/example2"
        android:maxLength="3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="6"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvLowerBloodPressure"
        app:layout_constraintStart_toEndOf="@+id/tvLowerBloodPressure" />

    <TextView
        android:id="@+id/tvMmhg2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_mmHg"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/etLowerBloodPressure"
        app:layout_constraintStart_toEndOf="@+id/etLowerBloodPressure" />

    <TextView
        android:id="@+id/tvPulse"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/tv_pulse"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLowerBloodPressure" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="105dp" />

    <EditText
        android:id="@+id/etPulse"
        android:hint="@string/example3"
        android:autofillHints="@string/example3"
        android:maxLength="3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="6"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvPulse"
        app:layout_constraintStart_toEndOf="@+id/tvPulse" />

    <TextView
        android:id="@+id/tvPulseUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_pulseUnit"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/etPulse"
        app:layout_constraintStart_toEndOf="@+id/etPulse" />

    <Button
        android:id="@+id/btEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/bt_entry"
        android:onClick="showDatePickerDialog"
        app:layout_constraintEnd_toStartOf="@+id/btNext"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPulse" />

    <Button
        android:id="@+id/btNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/bt_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btEntry"
        app:layout_constraintTop_toBottomOf="@+id/tvPulse" />

    <Button
        android:id="@+id/btTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_date"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvCountingTime"
        app:layout_constraintStart_toStartOf="@+id/guideline2" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_time"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvCountingTime"
        app:layout_constraintStart_toEndOf="@+id/btTime" />
</androidx.constraintlayout.widget.ConstraintLayout>